--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.android.material:material:1.1.0'
-
+    implementation 'pub.devrel:easypermissions:3.0.0'
 
     implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
 }
